# soundsofts

./: .gitignore  DEPLOYMENT.md  netlify.toml  requirements.txt  vercel.json  ~$烯补口粘接检测全套软件系统开发总结报告.docx  检测结题报告V3.md  聚乙烯补口粘接检测全套软件系统开发总结报告.docx  软件开发总结报告.md
ml-engine/: .gitignore  README.md  build_exe.spec  pyproject.toml  requirements-vercel.txt  requirements.txt  run_gui.py  vercel.json
ml-engine/api/: index.py  requirements.txt
ml-engine/configs/: data_config.yaml
ml-engine/configs/model_configs/: random_forest.yaml
ml-engine/public/: index.html
ml-engine/scripts/: build_exe.bat  export_onnx.py  serve_api.py  train_all.py
ml-engine/src/: __init__.py
ml-engine/src/data/: dataset.py  splitter.py  validator.py
ml-engine/src/experiment/: ab_test.py  mlflow_tracker.py  model_registry.py
ml-engine/src/features/: extractor.py  scaler.py  selector.py
ml-engine/src/gui/: __init__.py  app.py
ml-engine/src/inference/: onnx_exporter.py  predictor.py  torchscript_exporter.py  uncertainty.py
ml-engine/src/models/: __init__.py  base_model.py  cnn_1d.py  lightgbm_model.py  linear_regression.py  random_forest.py  svr_model.py  (+1 more)
ml-engine/tests/: test_api.py  test_models.py
signal-pipeline/: .coverage  .gitignore  API.md  README.md  build_exe.bat  pyproject.toml  requirements.txt  run_gui.py  signal_pipeline.spec  vercel.json
signal-pipeline/api/: index.py
signal-pipeline/public/: index.html
signal-pipeline/src/: __init__.py
signal-pipeline/tests/: test_api.py  test_feature_extraction.py  test_io.py  test_performance.py  test_pipeline.py  test_preprocessing.py  test_quality.py  test_spatial.py
(+296 files in other folders)
