[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-engine"
version = "1.0.0"
description = "Acoustic-force coupling regression model training and inference engine"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.109",
  "pydantic>=2.6",
  "numpy>=1.26",
  "scikit-learn>=1.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"

[tool.ruff]
line-length = 120
target-version = "py311"
